crates/sith_python_parser/tests/snapshots/invalid_syntax@expressions__compare__starred_expression.py.snap
---
source: crates/sith_python_parser/tests/fixtures.rs
input_file: crates/sith_python_parser/resources/invalid/expressions/compare/starred_expression.py
---
## AST

```
Module(
    ModModule {
        range: 0..39,
        body: [
            Expr(
                ExprStmt {
                    range: 0..7,
                    value: Compare(
                        CompareExpr {
                            range: 0..7,
                            left: Name(
                                NameExpr {
                                    range: 0..1,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                GtE,
                            ],
                            comparators: [
                                Starred(
                                    StarredExpr {
                                        range: 5..7,
                                        value: Name(
                                            NameExpr {
                                                range: 6..7,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 8..19,
                    value: Compare(
                        CompareExpr {
                            range: 8..19,
                            left: Name(
                                NameExpr {
                                    range: 8..9,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            ops: [
                                NotIn,
                            ],
                            comparators: [
                                Starred(
                                    StarredExpr {
                                        range: 17..19,
                                        value: Name(
                                            NameExpr {
                                                range: 18..19,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                        ctx: Load,
                                    },
                                ),
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 21..27,
                    value: Starred(
                        StarredExpr {
                            range: 21..27,
                            value: Compare(
                                CompareExpr {
                                    range: 22..27,
                                    left: Name(
                                        NameExpr {
                                            range: 22..23,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ops: [
                                        Lt,
                                    ],
                                    comparators: [
                                        Name(
                                            NameExpr {
                                                range: 26..27,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 28..39,
                    value: Starred(
                        StarredExpr {
                            range: 28..39,
                            value: Compare(
                                CompareExpr {
                                    range: 29..39,
                                    left: Name(
                                        NameExpr {
                                            range: 29..30,
                                            id: Name("x"),
                                            ctx: Load,
                                        },
                                    ),
                                    ops: [
                                        IsNot,
                                    ],
                                    comparators: [
                                        Name(
                                            NameExpr {
                                                range: 38..39,
                                                id: Name("y"),
                                                ctx: Load,
                                            },
                                        ),
                                    ],
                                },
                            ),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | x >= *y
  |      ^^ Syntax Error: Starred expression cannot be used here
2 | x not in *y
  |


  |
1 | x >= *y
2 | x not in *y
  |          ^^ Syntax Error: Starred expression cannot be used here
3 | 
4 | *x < y
  |


  |
2 | x not in *y
3 | 
4 | *x < y
  |  ^^^^^ Syntax Error: Comparison expression cannot be used here
5 | *x is not y
  |


  |
4 | *x < y
5 | *x is not y
  |  ^^^^^^^^^^ Syntax Error: Comparison expression cannot be used here
  |
